Scrollbar updated, and css mostly fixed

--- a/data/css/main.css
+++ b/data/css/main.css
@@ -9,6 +9,23 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+body::-webkit-scrollbar {
+    width: 1em;
+}
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #000000;
+}
+body::-webkit-scrollbar-thumb {
+    background-color: #FF0000;
+    outline: 1px solid #FFFFFF;
+}
+
+html {
+    overflow-y: scroll;
+    scrollbar-color: #FF0000 #FFFFFF;
+    scrollbar-width: thin;
+}
+
 a {
     text-decoration: none;
     color: #FF0000;
@@ -95,7 +112,7 @@ img:hover {
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1000px) {
   /* For mobile phones: */
   [class*="col-"] {
     width: 95%;
